# Oniris

./: .gitignore  CMakeLists.txt  README.md  pytest.ini  requirements.txt  setup.py
docs/: AGENTS.md  API.md  COMPILER.md  ONNX_MATCHER_STYLE.md  PATTERN_MANAGER.md  PROJECT_SUMMARY.md  QUICKSTART.md
examples/: compiler_example.py  complete_workflow_example.py  fusion_example.py  onnx_matcher_style_example.py  simple_example.py
examples/pattern_files/: README.md  USAGE_GUIDE.md  YAML_GUIDE.md  complete_demo.py  example_usage.py  pattern_cli.py  yaml_example.py  yaml_minimal_example.py
examples/pattern_files/patterns/: custom_patterns.yaml  fusion_patterns.yaml  optimization_patterns.yaml
python/oniris/: __init__.py  onnx_bridge.py  pattern_yaml.py
scripts/: README.md  build.sh  generate_dtypes.py  generate_from_proto.py  install.sh  lint.sh  package.sh  setup.sh  start_web.sh  test.sh  update_onnx_version.py
src/core/: logger.cpp  logger.hpp  types.cpp  types.hpp
src/ir/: graph.cpp  graph.hpp  model.cpp  model.hpp  node.cpp  node.hpp  tensor.hpp
src/passes/: compiler.cpp  compiler.hpp  onnx_matcher_style.cpp  onnx_matcher_style.hpp  pattern_manager.cpp  pattern_manager.hpp  shape_inference.cpp  shape_inference.hpp  simplifier.cpp  simplifier.hpp
src/python/: bindings.cpp
src/utils/: onnx_utils.cpp  onnx_utils.hpp
tests/: test_compiler.py  test_pattern_manager.py  test_pattern_yaml.py
tests/system/: test_models.py  test_onnx_tools.py  test_onnx_tools_layer_builder.py
tests/unit/: CMakeLists.txt  test_ir.cpp  test_onnx_matcher_style.cpp  test_shape_inference.cpp  test_simplifier.cpp  test_types.cpp
